syntax = "proto3";

package protos.engine;

import "protos/options.proto";

option go_package = "github.com/theQRL/zond/protos/engine";

message ExecutionPayload {
	bytes parent_hash           = 1 [(protos.ssz_size) = "32"];
	bytes fee_recipient         = 2 [(protos.ssz_size) = "20"];
	bytes state_root            = 3 [(protos.ssz_size) = "32"];
	bytes receipts_root         = 4 [(protos.ssz_size) = "32"];
	bytes logs_bloom            = 5 [(protos.ssz_size) = "256"];
	bytes prev_randao           = 6 [(protos.ssz_size) = "32"];
	uint64 block_number         = 7;
	uint64 gas_limit            = 8;
	uint64 gas_used             = 9;
	uint64 timestamp            = 10;
	bytes extra_data            = 11 [(protos.ssz_max) = "32"];
	bytes base_fee_per_gas      = 12 [(protos.ssz_size) = "32"];
	bytes block_hash            = 13 [(protos.ssz_size) = "32"];
	repeated bytes transactions = 14 [(protos.ssz_size) = "?,?", (protos.ssz_max)  = "1048576,1073741824"];
}

message ExecutionPayloadCapella {
	bytes parent_hash           = 1 [(protos.ssz_size) = "32"];
	bytes fee_recipient         = 2 [(protos.ssz_size) = "20"];
	bytes state_root            = 3 [(protos.ssz_size) = "32"];
	bytes receipts_root         = 4 [(protos.ssz_size) = "32"];
	bytes logs_bloom            = 5 [(protos.ssz_size) = "256"];
	bytes prev_randao           = 6 [(protos.ssz_size) = "32"];
	uint64 block_number         = 7;
	uint64 gas_limit            = 8;
	uint64 gas_used             = 9;
	uint64 timestamp            = 10;
	bytes extra_data            = 11 [(protos.ssz_max) = "32"];
	bytes base_fee_per_gas      = 12 [(protos.ssz_size) = "32"];
	bytes block_hash            = 13 [(protos.ssz_size) = "32"];
	repeated bytes transactions = 14 [(protos.ssz_size) = "?,?", (protos.ssz_max)  = "1048576,1073741824"];
	// MAX_WITHDRAWALS_PER_PAYLOAD
	repeated Withdrawal withdrawals = 15 [(protos.ssz_max) = "16"]; // New in Capella.
}

message ExecutionPayloadHeader {
	bytes parent_hash       = 1 [(protos.ssz_size) = "32"];
	bytes fee_recipient     = 2 [(protos.ssz_size) = "20"];
	bytes state_root        = 3 [(protos.ssz_size) = "32"];
	bytes receipts_root     = 4 [(protos.ssz_size) = "32"];
	bytes logs_bloom        = 5 [(protos.ssz_size) = "256"];
	bytes prev_randao       = 6 [(protos.ssz_size) = "32"];
	uint64 block_number     = 7;
	uint64 gas_limit        = 8;
	uint64 gas_used         = 9;
	uint64 timestamp        = 10;
	bytes extra_data        = 11 [(protos.ssz_max) = "32"];
	bytes base_fee_per_gas  = 12 [(protos.ssz_size) = "32"];
	bytes block_hash        = 13 [(protos.ssz_size) = "32"];
	bytes transactions_root = 14 [(protos.ssz_size) = "32"];
}

message ExecutionPayloadHeaderCapella {
	bytes parent_hash       = 1 [(protos.ssz_size) = "32"];
	bytes fee_recipient     = 2 [(protos.ssz_size) = "20"];
	bytes state_root        = 3 [(protos.ssz_size) = "32"];
	bytes receipts_root     = 4 [(protos.ssz_size) = "32"];
	bytes logs_bloom        = 5 [(protos.ssz_size) = "256"];
	bytes prev_randao       = 6 [(protos.ssz_size) = "32"];
	uint64 block_number     = 7;
	uint64 gas_limit        = 8;
	uint64 gas_used         = 9;
	uint64 timestamp        = 10;
	bytes extra_data        = 11 [(protos.ssz_max) = "32"];
	bytes base_fee_per_gas  = 12 [(protos.ssz_size) = "32"];
	bytes block_hash        = 13 [(protos.ssz_size) = "32"];
	bytes transactions_root = 14 [(protos.ssz_size) = "32"];
	bytes withdrawals_root  = 15 [(protos.ssz_size) = "32"]; // New in Capella.
}

message TransitionConfiguration {
	string terminal_total_difficulty = 1;
	bytes terminal_block_hash        = 2;
	bytes terminal_block_number      = 3;
}

message PayloadAttributes {
	uint64 timestamp              = 1;
	bytes prev_randao             = 2 [(protos.ssz_size) = "32"];
	bytes suggested_fee_recipient = 3 [(protos.ssz_size) = "20"];
}

message PayloadStatus {
	Status status           = 1;
	bytes latest_valid_hash = 2 [(protos.ssz_size) = "32"];
	string validation_error = 3;
	enum Status {
		UNKNOWN                 = 0;
		VALID                   = 1;
		INVALID                 = 2;
		SYNCING                 = 3;
		ACCEPTED                = 4;
		INVALID_BLOCK_HASH      = 5;
	}
}

message ForkchoiceState {
	bytes head_block_hash      = 1 [(protos.ssz_size) = "32"];
	bytes safe_block_hash      = 2 [(protos.ssz_size) = "32"];
	bytes finalized_block_hash = 3 [(protos.ssz_size) = "32"];
}

// The withdrawal receipt with the recipient address and amount withdrawn
message Withdrawal {
	// Withdrawal index for accounting purposes
	uint64 withdrawal_index = 1;

	// Validator index for the withdrawal
	uint64 validator_index = 2 [(protos.cast_type) = "github.com/theQRL/zond/consensus-types/primitives.ValidatorIndex"];

	// The execution address receiving the funds
	bytes execution_address = 3 [(protos.ssz_size) = "20"];

	// The withdrawn amount in Gwei
	uint64 amount = 4;
}

// Blobs bundle is retrieved through engine-api from the execution layer client.
// It consists of the necessary components for constructing a blobs sidecar object to gossip through p2p.
message BlobsBundle {
	// The block hash of the payload which corresponds to the blobs.
	bytes block_hash = 1 [(protos.ssz_size) = "32"];
	// The KZG commitments of the blobs.
	repeated bytes kzg_commitments = 2 [(protos.ssz_size) = "?,48", (protos.ssz_max) = "16"];
	// The blobs itself.
	repeated Blob blobs = 3 [(protos.ssz_max)  = "16"];
	// The aggregated proof of the blobs to enable fast validation for commitments and blobs.
	bytes aggregated_proof = 4 [(protos.ssz_size) = "48"];
}

// Blob contains the data that is to be committed on chain.
message Blob {
	// Each blob consists of `BLS_FIELD_ELEMENT`(32) multiplies `FIELD_ELEMENTS_PER_BLOB`(4096)
	bytes data = 1 [(protos.ssz_size) = "131072"]; // 32 * 4096 = 131072
}
